--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -11,3 +12,119 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/* #root{
+  background: rgb(242, 245, 255);
+} */
+
+
+
+
+
+  @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+*{
+  box-sizing: border-box;
+} 
+
+
+
+ body {
+
+/* background-color: rgb(20 26 97)!important; */
+
+
+  min-height: 100vh;
+display: flex;
+font-weight: 400;
+font-family: 'Fira Sans' ,'sans-serif';
+background: rgb(242, 245, 255)!important;;
+ }
+
+
+
+h1, h2 , h3 , h4 ,h5, h6 , label, span{
+  font-weight: 400;
+  font-family: 'Fira Sans' ,'sans-serif'; 
+}
+
+body , html , .App ,.auth-wrapper , #root {
+  width: 100%;
+  height: 100%;
+}
+
+
+
+.navbar-light{
+  background-color: #ffffff;
+  box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
+}
+
+.auth-wrapper{
+display: flex;
+justify-content: center;
+text-align: left;
+flex-direction: column;
+}
+
+.auth-inner{
+  width: 100%;
+  margin: auto;
+  margin-top: 60px;
+  background-color: #ffffff;
+  box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
+  padding: 40px 55px 45px 55px;
+  border-radius: 15px;
+  -webkit-border-radius: 15px;
+  -moz-border-radius: 15px;
+  -ms-border-radius: 15px;
+  -o-border-radius: 15px;
+  transition: all .3s;
+  -webkit-transition: all .3s;
+  -moz-transition: all .3s;
+  -ms-transition: all .3s;
+  -o-transition: all .3s;
+}
+
+.auth-wrapper .form-control:focus{
+border-color: #167bff;
+box-shadow: none;
+}
+
+.auth-wrapper h3{
+   text-align: center;
+   margin: 0;
+   line-height: 1;
+   padding-bottom: 20px;
+}
+.custom-control-lable{
+  font-weight: 400;
+}
+
+
+.forgot-password ,
+ .forgot-password a{
+
+  text-align: right;
+  font-size: 13px;
+  padding-top: 10px;
+color: #7f7d7d;
+margin: 0;
+
+}
+
+.forgot-password a {
+  color: #167bff;
+}
+
+
+
+
+
+
+
+ /* code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+}  */
+
